--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: "El vivero"
 author: "El vivero"
 description: ""
-baseurl: "/"
-url: "http://elvivero.es"
+url: "http://haztecaso.com"
+baseurl: "/elvivero/"
 lang: "en"
 
 google_analytics: "UA-16485293-1"
