--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "El vivero"
 author: "El vivero"
 description: ""
-url: "http://elvivero."
+url: "https://elvivero.es"
 baseurl: ""
 lang: "en"
 
